# python-cli

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: continuous-integration.yml
src/myclilibrary/: __init__.py  __main__.py  interface.py
tests/: test_interface.py
