
[tool.black]
line-length = 79

[tool.mypy]
python_version = 3.7
pretty = true

[tool.isort]
known_third_party = ["click", "myclilibrary", "pytest", "setuptools"]

[tool.coverage.run]
source_pkgs = ["myclilibrary"]

[tool.poetry]
name = "myclilibrary"
version = "0.1.0"
description = "Template for Python CLI library"
authors = ["Guillaume Lesaine <guillaume.lesaine@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"
mypy = "^0.910"
pre-commit = "^2.13.0"
pytest = "^6.2.4"
types-click = "^7.1.2"
tox = "^3.23.1"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
